# er-crit-coop

./: .gitignore  Cargo.toml  README.md
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
docs/: CRIT-COOP-RE.md  DEVELOPMENT.md  session.md
scripts/: deploy.sh
src/: diagnostic.rs  lib.rs  logger.rs  patch.rs
