[package]
name = "er-crit-coop"
version = "0.2.0"
edition = "2024"
description = "Elden Ring DLL mod: let Seamless Co-op partners damage enemies during critical (riposte/backstab) animations"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# FromSoftware reverse-engineering SDK (vswarte/fromsoftware-rs). Pinned to the exact
# commit the struct layouts below were read against.
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs", rev = "8c67a84f394bd58efdb06a5be47f988e0c1a9995" }
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs", rev = "8c67a84f394bd58efdb06a5be47f988e0c1a9995" }

windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
] }
log = "0.4"
simplelog = { version = "0.12", default-features = false }

[profile.release]
panic = "abort"
opt-level = "z"
codegen-units = 1
lto = true
strip = true
